--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-input-mask": "^2.0.4",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
